# a2a-policy-for-agentforce

./: .gitignore
agentforce-api-to-a2a/: .gitignore  Cargo.toml  Makefile  README.md  ROADMAP.md
agentforce-api-to-a2a/definition/: gcl.yaml  home.md
agentforce-api-to-a2a/playground/: docker-compose.yaml
agentforce-api-to-a2a/playground/config/: api.yaml
agentforce-api-to-a2a/src/: agent_card.rs  cache.rs  config.rs  jsonrpc.rs  lib.rs  router.rs
agentforce-api-to-a2a/src/a2a/: mapping.rs  methods.rs  mod.rs  types.rs
agentforce-api-to-a2a/src/agentforce/: auth.rs  client.rs  mod.rs
agentforce-api-to-a2a/src/exchange/: mod.rs  multipart.rs  publish.rs
agentforce-api-to-a2a/src/store/: mod.rs  object_store_v2.rs  task_store.rs
agentforce-api-to-a2a/tests/: it_handles_message_send.rs
agentforce-api-to-a2a/tests/common/: mod.rs
