# Copyright 2026 Salesforce, Inc. All rights reserved.
[package]
name = "agentforce_api_to_a2a"
version = "1.0.0"
rust-version = "1.88.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# Asset coordinates published to Anypoint Exchange. Same shape as the
# `oauth_2_jwt_bearer` reference policy: declare the definition asset id
# and let cargo-anypoint derive the implementation asset id.
[package.metadata.anypoint]
group_id = "f684513f-280e-403a-ac53-80ca62e3de49"
# The Anypoint Exchange CLI rejects asset ids whose hyphen-separated segments
# mix letters and digits (e.g. "a2a"). Each segment must be purely alphabetic
# or purely numeric, so "a2a" is encoded as the three segments "a-2-a".
definition_asset_id = "agentforce-api-to-a-2-a"
implementation_asset_id = "agentforce-api-to-a-2-a-wasm"

[dependencies]
pdk = "1.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_urlencoded = "0.7"
anyhow = "1.0"
thiserror = "1"
base64 = "0.22"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
getrandom = { version = "0.2", features = ["js"] }
urlencoding = "2.1"

[dev-dependencies]
pdk-unit = "1.8.0"

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
panic = "abort"
